@@ -6,6 +6,7 @@ import static org.mockito.Mockito.when;
 import com.aimong.backend.domain.mission.config.ModelRoutingProperties;
 import com.aimong.backend.domain.mission.entity.DifficultyBand;
 import com.aimong.backend.domain.mission.entity.QuestionType;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -24,8 +25,8 @@ class QuestionGenerationServiceTest {
                 new KerisCurriculumRegistry(),
                 new ModelRoutingPolicy(new ModelRoutingProperties("gpt-5-mini", "gpt-5.4-mini")),
                 candidateGenerator,
-                new QuestionValidator(new KerisCurriculumRegistry(), new ChildSafetyFilter()),
-                new SimilarityDeduplicator()
+                validationService(),
+                new BatchDistributionValidator()
         );
 
         QuestionGenerationService.QuestionGenerationRequest request = new QuestionGenerationService.QuestionGenerationRequest(
@@ -40,7 +41,8 @@ class QuestionGenerationServiceTest {
                 false,
                 false,
                 false,
-                List.of("AI 답은 다시 확인해야 해요"),
+                List.of("AI 답을 다시 확인해야 해요"),
+                List.of(),
                 List.of()
         );
 
@@ -49,12 +51,12 @@ class QuestionGenerationServiceTest {
                 1,
                 DifficultyBand.LOW,
                 QuestionType.MULTIPLE,
-                "AI에게 도움을 받을 때 가장 안전한 입력은 무엇일까요?",
-                List.of("가상의 이름", "좋아하는 색", "발표 주제", "원하는 형식"),
+                "AI에게 개인정보를 보낼 때 가장 먼저 확인해야 할 것은 무엇일까요?",
+                List.of("보내는 사람이 믿을 만한지", "파일 크기", "배경 색깔", "글자 수"),
                 0,
-                "실제 개인정보 대신 가상의 예시를 쓰는 것이 안전해요.",
+                "개인정보를 보낼 때는 상대가 믿을 만한지 먼저 확인해야 해요.",
                 List.of("PRIVACY", "SAFETY"),
-                "KERIS-1 Ch2.1 pp.27-29; Ch4.2 pp.163-178; D0qG389 STEP 2",
+                "KERIS-REF",
                 2
         );
         StructuredQuestionSchema duplicateCandidate = new StructuredQuestionSchema(
@@ -62,12 +64,12 @@ class QuestionGenerationServiceTest {
                 1,
                 DifficultyBand.LOW,
                 QuestionType.MULTIPLE,
-                "AI 답은 다시 확인해야 해요",
-                List.of("가상의 이름", "좋아하는 색", "발표 주제", "원하는 형식"),
+                "AI 답을 다시 확인해야 해요",
+                List.of("보내는 사람이 믿을 만한지", "파일 크기", "배경 색깔", "글자 수"),
                 0,
-                "실제 개인정보 대신 가상의 예시를 쓰는 것이 안전해요.",
+                "정답을 다시 확인하는 습관이 중요해요.",
                 List.of("PRIVACY", "SAFETY"),
-                "KERIS-1 Ch2.1 pp.27-29; Ch4.2 pp.163-178; D0qG389 STEP 2",
+                "KERIS-REF",
                 2
         );
 
@@ -79,6 +81,26 @@ class QuestionGenerationServiceTest {
         assertThat(result.routingDecision().selectedModel()).isEqualTo("gpt-5-mini");
         assertThat(result.accepted()).containsExactly(acceptedCandidate);
         assertThat(result.rejected()).hasSize(1);
-        assertThat(result.rejected().get(0).reasons()).anyMatch(reason -> reason.contains("duplicate"));
+        assertThat(result.rejected().getFirst().report().hardFailReasons()).anyMatch(reason -> reason.contains("duplicate"));
+    }
+
+    private QuestionValidationService validationService() {
+        ObjectMapper objectMapper = new ObjectMapper();
+        KerisCurriculumRegistry registry = new KerisCurriculumRegistry();
+        return new QuestionValidationService(
+                new SchemaValidator(),
+                new SafetyValidator(),
+                new CurriculumFitValidator(registry),
+                new StructureRuleValidator(registry),
+                new ElementaryReadabilityValidator(),
+                new AnswerQualityValidator(),
+                new ExplanationQualityValidator(),
+                new NaturalnessValidator(),
+                new KoreanSurfaceLintValidator(),
+                new Step3VocabularyCeilingValidator(),
+                new SimilarityDeduplicator(),
+                new KerisGoldExampleRegistry(objectMapper),
+                objectMapper
+        );
     }
 }
